Added readme and use tsconfig.json for setup

--- a/solutions/riddle_2/js_version/package.json
+++ b/solutions/riddle_2/js_version/package.json
@@ -5,12 +5,10 @@
   "description": "Player 357",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d lib",
+    "start" : "node index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Larry Battle",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.11.4"
-  }
+  "license": "MIT"
 }
